--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ Powerpoint/Bilder powerpoint/navbar_hamburger leiste ein_ausklappen.png
 Powerpoint/Bilder powerpoint/navbar.png
 Powerpoint/Bilder powerpoint/Seitentemplate.png
 Powerpoint/Bilder powerpoint/webseite.png
+Powerpoint/Bilder powerpoint/alertbox.png
+Powerpoint/Bilder powerpoint/eventlistner_js_skript.png
+Powerpoint/Bilder powerpoint/hide_password.png
+Powerpoint/Bilder powerpoint/regsitry ausgefüllt.png
